--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ Homepage = "https://github.com/Hochfrequenz/chronomeleon"
 
 [tool.black]
 line-length = 120
-target_version = ["py38", "py39", "py310", "py311", "py312"]
+target_version = ["py310", "py311", "py312"]
 
 [tool.isort]
 line_length = 120
