--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
     "pytz"
@@ -56,7 +57,7 @@ Homepage = "https://github.com/Hochfrequenz/chronomeleon"
 
 [tool.black]
 line-length = 120
-target_version = ["py310", "py311", "py312", "py313"]
+target_version = ["py310", "py311", "py312", "py313", "py314"]
 
 [tool.isort]
 line_length = 120
